--- a/core/styles/foundation.css
+++ b/core/styles/foundation.css
@@ -82,3 +82,83 @@ h2 hr {
         display: none;
     }
 }
+
+.placeholder {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+div .productContainer {
+  position: relative;
+  display: flex;
+  top: -20px;
+  min-width: 300px;
+}
+
+div .productContainer > .imageContainer {
+  background-color: rgb(219, 219, 219); 
+  float: left; 
+  width: 70px; 
+  height: 70px; 
+  position: absolute; 
+  top: 6px; 
+  border-radius: 12px;
+}
+
+div .productContainer > .infoContainer {
+  position: relative; 
+  top: 2px; 
+  margin-left: 82.5px;
+}
+
+.infoContainer > div > .productName {
+  color:rgb(20, 20, 20); 
+  font-size: x-large; 
+  font-weight: 900; 
+  margin-right: 2px;
+}
+
+.infoContainer > div > .productName {
+  color:rgb(20, 20, 20); 
+  font-size: x-large; 
+  font-weight: 900; 
+  margin-right: 2px;
+}
+
+.infoContainer > div > .productPrice {
+  position: relative; 
+  font-size: 18px; 
+  font-family: 'Gemunu Libre', sans-serif; 
+  font-weight: 800; 
+  top: -2px;
+}
+
+.infoContainer > .productDescription {
+  font-size: medium; 
+  font-weight: 400; 
+  position: relative; 
+  top: -4px;
+}
+
+.infoContainer > .productAllergens {
+  font-size: small;
+  font-weight: 300;
+  position: relative; 
+  top: -8px;
+}
+
+.infoContainer > div > .productName {
+  color:rgb(20, 20, 20); 
+  font-size: x-large; 
+  font-weight: 900; 
+  margin-right: 2px;
+}
+
+.productImage {
+  border-radius: 12px;
+  width: 70px; 
+  height: 70px; 
+  image-rendering: optimizeSpeed;
+}
